--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>
-      Tab 1
+      Validador IMC
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,27 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">VALIDADOR IMC</ion-title>
     </ion-toolbar>
-  </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+
+  </ion-header>
+  <ion-card>
+    <ion-item>
+      <ion-label position="floating">Peso:</ion-label>
+      <ion-input [(ngModel)]="peso" (ionChange)="calcular()"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Altura:</ion-label>
+      <ion-input [(ngModel)]="altura" (ionChange)="calcular()"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">IMC:</ion-label>
+      <ion-input [(ngModel)]="imc"></ion-input>
+    </ion-item>
+  </ion-card>
+  <ion-card>
+    <ion-input>STATUS</ion-input>
+  </ion-card>
+  <ion-button size="large" expand="full" (click)="exibirMensagem()">GRAVAR</ion-button>
 </ion-content>
