--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -29,7 +29,7 @@
     </ion-item>
   </ion-card>
   <ion-card>
-    <ion-input>STATUS</ion-input>
+    <ion-input [(ngModel)]="status_imc">STATUS</ion-input>
   </ion-card>
   <ion-button size="large" expand="full" (click)="exibirMensagem()">GRAVAR</ion-button>
 </ion-content>
